--- a/src/MediatR/MediatR.nuspec
+++ b/src/MediatR/MediatR.nuspec
@@ -6,10 +6,10 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>https://github.com/jbogard/MediatR/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/jbogard/MediatR</projectUrl>
+    <licenseUrl>https://github.com/CollaboratingPlatypus/MediatR/MediatR/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/CollaboratingPlatypus/MediatR/MediatR</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <copyright>Copyright 2014 Jimmy Bogard</copyright>
+    <copyright>Copyright © Collaborating Platypus 2015</copyright>
   </metadata>
 </package>
