--- a/src/MediatR/packages.config
+++ b/src/MediatR/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="portable-net40+sl50+win+wp80+MonoAndroid10+MonoTouch10" requireReinstallation="True" />
+  <package id="Portable.CommonServiceLocator" version="1.2.2" targetFramework="portable-net45+win+wp80" />
 </packages>
