--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,6 @@
 version: 1.1.{build}
-environment:
-  developmentversion: $(version)-beta
 init:
-- ps: "Write-Host $env:version\nWrite-Host $env:developmentversion\nif ($env:APPVEYOR_REPO_BRANCH -ieq \"development\")\n{\n Set-AppveyorBuildVariable 'version' '$env:developmentversion' \n}"
+- ps: "Write-Host $env:version\nif ($env:APPVEYOR_REPO_BRANCH -ieq \"development\")\n{\n Set-AppveyorBuildVariable 'version' '$env:version-beta' \n}\nWrite-Host $env:version"
 branches:
   only:
   - master
